--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "@headlessui/vue": "^1.7.22",
         "@intlify/vue-i18n-loader": "^4.2.0",
         "laravel-vue-i18n": "^2.7.7",
-        "vue-i18n": "^9.13.1",
-        "vuetify": "^3.6.0-beta.0.0"
+        "vue-i18n": "^9.13.1"
     }
 }
