--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@headlessui/vue": "^1.7.22",
         "@intlify/vue-i18n-loader": "^4.2.0",
+        "@vuepic/vue-datepicker": "^8.8.0",
         "laravel-vue-i18n": "^2.7.7",
         "vue-i18n": "^9.13.1"
     }
