--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "@headlessui/vue": "^1.7.22",
         "@intlify/vue-i18n-loader": "^4.2.0",
         "@vuepic/vue-datepicker": "^8.8.0",
+        "chart.js": "^4.4.3",
         "laravel-vue-i18n": "^2.7.7",
+        "vue-chartjs": "^5.3.1",
         "vue-i18n": "^9.13.1"
     }
 }
