--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "laravel-vue-i18n": "^2.7.7",
         "uuid": "^10.0.0",
         "vue-chartjs": "^5.3.1",
-        "vue-i18n": "^9.13.1"
+        "vue-i18n": "^9.13.1",
+        "vuejs-confirm-dialog": "^0.5.1"
     }
 }
